[gd_scene format=3 uid="uid://coac38ftv7f7v"]

[ext_resource type="Script" uid="uid://bup1tl7nb84xb" path="res://Scripts/BossProjectile.gd" id="1_qtnui"]
[ext_resource type="PackedScene" uid="uid://bmd32mvlakd4b" path="res://Resources/3D/spear.glb" id="2_0dd64"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xh6v2"]

[node name="Projectile" type="Area3D" unique_id=395601081]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
script = ExtResource("1_qtnui")
speed = 8.0
max_scale = Vector3(1, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=38575158]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("SphereShape3D_xh6v2")

[node name="base" type="Node3D" parent="." unique_id=1714816486]

[node name="spear" parent="base" unique_id=1684871893 instance=ExtResource("2_0dd64")]
transform = Transform3D(0.28559133, 1.0501877, 0.060940783, 1.1121145, -0.283103, 0.14227393, 0.33234572, 0.044887803, -0.5284529, 0, 0, 0.039821126)

[node name="Timer" type="Timer" parent="." unique_id=1793413249]
one_shot = true

[node name="MaxLifeTimeTimer" type="Timer" parent="." unique_id=667409159]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MaxLifeTimeTimer" to="." method="_on_max_life_time_timer_timeout"]
